--- a/extensions/solar-combo-extension/blocks/kit-combination.liquid
+++ b/extensions/solar-combo-extension/blocks/kit-combination.liquid
@@ -1,17 +1,23 @@
-
 <div id="root"></div>
+
 
 {% schema %}
 {
   "name": "kit-combination",
   "target": "section",
   "enabled_on": {
-      "templates": ["*"]
-    },
-    "stylesheet": "main.css",
-    "javascript": "main.js",
+    "templates": ["*"]
+  },
+  "stylesheet": "main.css",
+  "javascript": "main.js",
 
-  "settings": []
+  "settings": [
+    {
+      "type": "product",
+      "id": "product",
+      "label": "Product"
+    }
+  ]
 }
 {% endschema %}
 
