--- a/solar-combo-react/src/App.css
+++ b/solar-combo-react/src/App.css
@@ -86,7 +86,7 @@ input[type="number"]:focus-visible {
   gap: 15px;
 }
 
-.volumeButton,
+
 .cartButton {
   background-color: #007bff;
   color: white;
@@ -96,16 +96,35 @@ input[type="number"]:focus-visible {
   font-weight: 600;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  margin-top: 20px;
+  position: relative;
+  padding: 10px 20px;
 }
 
-.volumeButton:hover,
+.loader {
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  animation: spin 1s linear infinite;
+  display: inline-block;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .cartButton:hover {
   background-color: #0056b3;
 }
 
-.cartButton {
-  margin-top: 20px;
-}
 
 .total-price {
   display: flex;
