--- a/solar-combo-react/src/App.css
+++ b/solar-combo-react/src/App.css
@@ -273,6 +273,7 @@ input[type="number"]:focus-visible {
   align-items: center;
   justify-content: flex-start;
   gap: 20px;
+  margin: 0px 30px;
 }
 
 .cartButton {
@@ -346,6 +347,7 @@ input[type="number"]:focus-visible {
 }
 
 .custom-variant-price {
-  color: black;
-  font-size: larger;
+  color: #000;
+  font-size: x-large;
+  margin: 0px 30px;
 }
