chnage for vq theme

--- a/extensions/solar-combo-extension/blocks/kit-combination.liquid
+++ b/extensions/solar-combo-extension/blocks/kit-combination.liquid
@@ -1,4 +1,4 @@
-<div id="root"></div>
+<div id="solar-combo"></div>
 
 
 {% schema %}
@@ -10,7 +10,6 @@
   },
   "stylesheet": "main.css",
   "javascript": "main.js",
-
   "settings": [
     {
       "type": "product",
