--- a/solar-combo-react/src/App.css
+++ b/solar-combo-react/src/App.css
@@ -368,6 +368,12 @@ p {
   /* margin: 0 0 19.44444px; */
 }
 
+p:last-child {
+  /* margin-bottom: 0; */
+  /* margin: 0px; */
+  padding: 0px;
+}
+
 .custom-variant-price {
   color: #000;
   font-size: x-large;
