update css for 768 and 1024px

--- a/solar-combo-react/src/App.css
+++ b/solar-combo-react/src/App.css
@@ -590,9 +590,9 @@ p:last-child {
   }
 
   .price {
-    font-size: 25px;
+    display:-webkit-box;
     color: #000;
-    margin-left: 10px;
+    margin-left: 10px
   }
 
   .cart-button-container {
