update css for 768 and 1024px

--- a/solar-combo-react/src/App.css
+++ b/solar-combo-react/src/App.css
@@ -596,8 +596,10 @@ p:last-child {
 
   .price {
     display: -webkit-box;
+    font-size: 25px;
     color: #000;
-    margin-left: 10px
+    margin-left: 10px;
+    width: auto;
   }
 
   .cart-button-container {
