--- a/solar-combo-react/src/App.css
+++ b/solar-combo-react/src/App.css
@@ -869,7 +869,7 @@ p:last-child {
 
 }
 
-@media screen and (max-width: 320) {
+@media screen and (max-width: 320px) {
 
   .ques-1 h1,
   .ques-2 h1,
